fixed border clipping issue on sign in form

--- a/public/stylesheets/sass/modal.sass
+++ b/public/stylesheets/sass/modal.sass
@@ -24,10 +24,10 @@ h1
 form
   font-size: 13px
   margin: 0 auto
-  width: 247px
+  width: 260px
 
   label
-    margin: 0
+    margin-left: 5px
 
   input
     margin: 0 0 10px
